Relecture, corrections de fautes Deplacement de la partie open-source/Codehaus en intro

--- a/latex/abstract.tex
+++ b/latex/abstract.tex
@@ -1,5 +1,5 @@
 IzPack est un logiciel libre java dédié à la création d'installeur personnalisé pour applications.
-Il permet de décharger la création d'installeur en automatisant ce processus.
+Il permet de décharger le développement en automatisant ce processus.
 Cependant, IzPack est sujet au même problèmes que tous les logiciels et nécessitent des phases de refactoring.
 Ces phases permettent d'améliorer la qualité du code et de le rendre plus maintenable dans l'avenir.
 
