--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -1,24 +1,24 @@
 Dans le cadre de notre troisième année d'étude à l'Institut Supérieur d'Informatique, de Modélisation et de leurs Applications, nous avons effectué un projet d'une durée de 240 heures entre novembre 2008 et mars 2009 sous la tutelle de Julien Ponge.
-Ce projet a comme sujet IzPack, un logiciel open source.
+Ce projet porte sur IzPack, un logiciel open-source sous la fondation Codehaus.
 
 Le développement de logiciel prend de l'ampleur et nécessite de plus en plus de temps.
 Externaliser certaines logiques, certaines procédures dans des outils externes qui permettent de diminuer ce temps de développement devient alors intéressant.
 Izpack rentre dans cette catégorie d'outils : en effet, il se charge de générer la partie installation de l'application.
 
 Cependant, IzPack est un logiciel à part entière et nécessite un investissement.
-Cependant, IzPack rencontre comme tous les logiciels, des problèmes incontournable : bugs, librairies obsolètes, problème de design, etc.
-De même, des nouvelles pratiques de programmation apparaissent tandis que les anciennes pratiques atteignent leurs limites.
-Pour résoudre ces problèmes, une pratique courante consiste à faire du refactoring sur l'application.
-Ce refactoring retouche le code, étapes par étapes, afin d'améliorer le design, la qualité et la maintenabilité du code.
+Il rencontre comme tous les logiciels, des problèmes incontournable : bugs, librairies obsolètes, problème de design, etc.
+De même, des nouvelles pratiques de programmation apparaissent alors que les anciennes montrent leurs limites.
+Pour résoudre ces problèmes, une pratique courante est de faire du refactoring sur l'application.
+Le refactoring consiste à retoucher le code, étapes par étapes, afin d'améliorer le design, la qualité et la maintenabilité du code sans ajouter de fonctionnalités et modifier la logique existante.
 
-Le refactoring est peut-être considéré comme une perte de temps d'un point de vue extérieur car aucune nouvelle fonctionnalité et aucun travail visible par le client n'est réalisé.
+Le refactoring peut-être considéré comme une perte de temps d'un point de vue extérieur car aucune nouvelle fonctionnalité et aucun travail visible par le client n'est réalisé.
 Cependant, cette pratique est indispensable pour assurer la pérennité de l'application.
 En effet, l'ajout de fonctionnalité se fait souvent au détriment de la lisibilité et il est possible de trouver un meilleur design après un temps de réflexion.
 Le refactoring permet de corriger la première implémentation réalisée et de produire du code plus mature et plus stable.
 
 Toutefois, cette pratique est généralement peu appliquée à cause de l'absence d'intérêt à court terme.
 IzPack présente aujourd'hui des améliorations possibles réalisables grâce au refactoring, notamment dans la gestion des fichiers XML.
-IzPack s'appuie sur NanoXml pour gérer ces fichiers, mais cette librairie entraîne un certain nombre de problèmes de part sa vétusté.
+En effet, il s'appuie sur NanoXml pour gérer ces fichiers, mais cette librairie entraîne un certain nombre de problèmes de part sa vétusté.
 Utiliser les librairies natives de java à la place régleraient ces problèmes.
 
 Dans le cadre de notre projet de troisième année à l'ISIMA, nous avons été chargé du refactoring de cette partie d'IzPack.
