--- a/latex/abstract.tex
+++ b/latex/abstract.tex
@@ -1,4 +1,4 @@
-IzPack est un logiciel libre java dédié à la création d'installeur personnalisé pour applications.
+IzPack est un logiciel libre java dédié à la création d'installateur personnalisé pour applications.
 Il permet de décharger le développement en automatisant ce processus.
 Cependant, IzPack est sujet au même problèmes que tous les logiciels et nécessitent des phases de refactoring.
 Ces phases permettent d'améliorer la qualité du code et de le rendre plus maintenable dans l'avenir.
