--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -3,7 +3,7 @@ L'environnement avait pour but de permettre un développement agile.
 On peut distinguer 3 parties : la gestion du projet, la gestion des sources et les outils de développements.
 \section{Planification et gestion de projet}
 La méthode agile préconise des itérations courtes avec des objectifs clairs et concis à réaliser à chaque itération.
-A chaque itération, un point est fait avec le client pour définir les objectifs pour la prochaine itération, le client ici étant notre tuteur, Julien Ponge.
+A la fin d'une itération, un point était fait avec le client pour définir les objectifs pour la prochaine itération, le client ici étant notre tuteur, Julien Ponge.
 Nous avons utilisé un outil pour gérer ces objectifs et ces itérations, il s'agit de LightHouse.
 \subsection{Lighthouse}
 Lighthouse est un gestionnaire de projet en ligne.
@@ -52,9 +52,9 @@ Il s'agit, à l'instar de BitKeeper, d'un système distribué.
 Toutes les copies du dépôt sont elles-mêmes des serveurs.
 Chaque personne travaille donc sur son propre dépôt et se synchronise par rapport à d'autres dépôts.
 C'est de cet aspect distribué que provient une grande partie de la puissance de Git.
-Un utilisateur a accès à l'historique entier une fois qu'il a cloné le dépôt.
+Un utilisateur a accès à l'historique entier du dépôt une fois qu'il a cloné le dépôt.
 Il peut effectuer toutes les operations voulues sur son dépôt en étant déconnecté et chaque clone est une sauvegarde intégrale du dépôt.
-Ainsi, n'importe quel développeur a accès à toutes les fonctionnalités d'un gestionnaire de version même s'il n'est pas connecté au dépôt central.
+Ainsi, n'importe quel développeur a accès à toutes les fonctionnalités d'un gestionnaire de version même si il est totalement isolé.
 La communication entre dépôts Git se fait soit par le protocole ssh, https, ftp, rsync ou par le protocole git.
 
 Git se démarque également sur des fonctionnalités évoluées.
@@ -67,12 +67,16 @@ Nous avons travaillé sur un fork de ce dépôt.
 Nous pouvions à tout moment synchroniser notre dépôt par rapport au dépôt d'origine et ainsi, appliquer toutes les modifications des contributeurs à notre dépôt.
 Cela permettait de préparer l'application de nos modifications de manière aisée. Tout ces dépôts sont hébergés sur GitHub.
 \subsection{GitHub}
-GitHub est une plateforme collaborative hébergeant des dépôts Git.
+GitHub est une plateforme collaborative gratuite hébergeant des dépôts Git.
 Cette plateforme permet de créer, dupliquer, supprimer ou consulter des dépôts Git.
-Toutes les réalisations faites sont ouvertes et disponibles à tout le monde, c'est à dire que n'importe qui est libre de consulter, cloner ou de forker les projets présents sur GitHub.
-Le droit de commit est cependant restreint aux utilisateurs choisies.
+Toutes les réalisations faites sont ouvertes et disponibles à tout le monde, c'est à dire que n'importe qui est libre de consulter, cloner ou de forker les projets présents sur GitHub cependant, 
+le droit de commit est restraint aux utilisateurs choisies.
+Il est également possible de créer des dépôts sous conditions de payer un abonnement
+
+De nombreux projets utilisent GitHub comme plateforme, notamenent rails, Rspec, scriptaculous...
+
 Cette plateforme a été choisie par Julien Ponge pour héberger son dépôt Git.
-Nous nous sommes donc créés des comptes sur GitHub et l'avons forké.
+Nous avons donc créés des comptes sur GitHub et avons forké le projet.
 L'utilisation d'un dépôt public basé sur celui de Julien Ponge a permis non seulement de faciliter les mises à jour, mais également de lui permettre de suivre facilement notre travail.
 %- GitHub : Gestionnaire de dépôt Git
 %-> Duplicat (fork) du projet
@@ -89,7 +93,7 @@ L'utilisation d'un dépôt public basé sur celui de Julien Ponge a permis non s
 IntelliJ est un environnement de développement intégré similaire à Eclipse.
 Il est propriétaire et nécessite une licence pour son fonctionnement.
 Cependant, JetBrain, l'éditeur de IntelliJ, a une politique d'ouverture pour les projets open-source.
-Les projets sous CodeHaus et Apache bénéficient d'une licence dédiée et gratuite.
+Les projets membres des fondations Codehaus ou Apache bénéficient d'une licence dédiée et gratuite.
 
 Il présente certaines divergences avec des IDE comme Eclipse et NetBeans.
 Il possède une plus grande variété de fonctionnalités et l'intégration d'un grand nombre de composants.
